Add testes unitários restaurante das classes BuscarRest, e CadastrarEndereco